Service page is now updated with Places API :D

--- a/src/app/css/sign_up_page.css
+++ b/src/app/css/sign_up_page.css
@@ -9,3 +9,11 @@
 body {
     height: 100%;
 }
+
+ 
+
+
+/* <img className = "card-img-top img-fluid imageAdjust" src= {service.photos[0].name}/> */
+
+
+/* <img className = "card-img-top img-fluid imageAdjust" src= {service.photo_image}/> */
