Working with single service pages

--- a/src/app/css/service_card.css
+++ b/src/app/css/service_card.css
@@ -1,12 +1,13 @@
 .cardAdjust {
     width: 18rem;
-}
-
-.imageAdjust {
-    max-height: 286px;
+    height: 420px;
 }
 
 .fixHeight{
     min-height: 200px;
     max-height: 200px;
+}
+
+.titleHeight{
+    height:58px;
 }
