--- a/src/app/css/services_page.css
+++ b/src/app/css/services_page.css
@@ -22,6 +22,9 @@
 }
 
 .service_images {
-    max-height: 400px;
+    height: 350px;
+    max-height: 350px;
+    width:400px;
+    /* max-height: 600px; */
 }
 
