--- a/src/app/css/services_page.css
+++ b/src/app/css/services_page.css
@@ -18,12 +18,26 @@
 }
 
 .service_info{
-    height: 500px;
+    height: 550px;
+}
+.map_place{
+    height: 90%;
 }
 
 .service_images {
     height: 350px;
     max-height: 350px;
     width:400px;
+}
+.overlay {
+    opacity: 0;
+    visibility: hidden;
+    transition:opacity 0.3s ease-in-out, visibility 0.2s ease-in-out;
+}
+
+.position-relative:hover .overlay {
+    opacity: 1;
+    visibility: visible ;
+
 }
 
