--- a/src/app/css/services_page.css
+++ b/src/app/css/services_page.css
@@ -35,7 +35,7 @@
     transition:opacity 0.3s ease-in-out, visibility 0.2s ease-in-out;
 }
 
-.position-relative.bob:hover .overlay {
+.position-relative.gallery:hover .overlay {
     opacity: 1;
     visibility: visible ;
 
