Complete HashMap, Gallery and Fuel Prices in Service Info Page, and Edge Case Fixes. (#18)
* Transfer from react to next

* Navigation to pages

* Fixed some code to adapt to merge. Added navigation to pages where it was missing

* Change to address page for form check

* Shows user name on pages

* Added the services menu page and subpage

* Keeping track of user's response

* Address valdiation and modifications to service pages

* Testing the validator

* Merged with main branch successfully

* Working with calling Places API

* Service page is now updated with Places API :D

* Small change to questionaire

* Working with single service pages

* Preventing API calls when going back from single pages

* Added so that service page still works when empty response was sent

* Removed comment

* Forgot file from merge

* Added comments

* Messing with loading place holders and fixed an error with hashmap

* Added functionality to buttons for the questionnaire page

* File save

* Added end page to show complete list of user response. Changed pages to accomdiate for this addition

* Back button to questionnaire

* Self comment

* Fixed some edge cases

* Testing routing

* Comments and trying to fix image not loading

* Removed comments in a file

* Begin page added

* Added user and guest flow

* forget to remove code

* Fixed a questionnaire issue that prevented searching

* Small display change in favorites

* Worked on extra sub pages and tried to fix photo errors

* Working with photos api calls

* Gallery and fuel prices no longer need pages

* Cleaning up code

* Comments added

* Added missing states due to merge and starting from favorites

* Temporary solution to photo error

--- a/src/app/css/services_page.css
+++ b/src/app/css/services_page.css
@@ -18,12 +18,31 @@
 }
 
 .service_info{
-    height: 500px;
+    height: 550px;
+}
+.map_place{
+    height: 90%;
 }
 
 .service_images {
     height: 350px;
     max-height: 350px;
     width:400px;
+}
+.overlay {
+    opacity: 0;
+    visibility: hidden;
+    transition:opacity 0.3s ease-in-out, visibility 0.2s ease-in-out;
+}
+
+.position-relative.gallery:hover .overlay {
+    opacity: 1;
+    visibility: visible ;
+
+}
+
+.modal.fade .modal-dialog {
+    transform: scale(1);
+    transition: transform .5s ease-in-out;
 }
 
