--- a/src/app/css/sign_up_page.css
+++ b/src/app/css/sign_up_page.css
@@ -6,6 +6,18 @@
     height:100vh;   
 }
 
-body {
+/* body {
     height: 100%;
+} */
+
+.title_heading {
+    transform: translate(0%, 50%);
+}
+
+.title {
+    height: 150px;
+}
+
+.title_text {
+    font-size: 60px;
 }
