--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +10,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: oklch(0.446 0.043 257.281); */
+    --background: oklch(0.372 0.044 257.287);
+    /* --background: oklch(0.208 0.042 265.755); */
     --foreground: #ededed;
   }
 }
@@ -24,3 +27,5 @@ body {
   font-family: Arial, sans-serif;
   /* background-color: #000000; */
 }
+
+
