Working with responsive and adapting with sessions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     --foreground: #ededed;
     --card_bg: #333d50;
     --textContent: #ffffff;
-    --border_col: #626978;  */
+    --border_col: #626978;  
     --p1: 103, 198, 226;
     /* --p2: #81cee6; */
   }
