--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   --content-outline: 229 231 235;
   --history-card: 147 197 253;
   --history-card-sec: 229 231 235;
+  --history-side: 243 244 246;
 
   --page-heading: var(--heading);
 
@@ -78,6 +79,7 @@
   --content-outline: var(--content);
   --history-card: 30 64 175;
   --history-card-sec: 100 116 139;
+  --history-side: 71 85 105;
 
   --page-heading: 15 23 42;
 
@@ -139,6 +141,7 @@
   --color-content-hover: rgba(var(--content-hover));
   --color-history-card: rgba(var(--history-card));
   --color-history-card-sec: rgba(var(--history-card-sec));
+  --color-history-side: rgba(var(--history-side));
 
   --color-page-heading: rgba(var(--page-heading));
 
